hphp/test/slow/inout/bad-call-11.php.expectf

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Parameters marked inout must be contained in locals, vecs, dicts, keysets, and arrays' in %s/bad-call-11.php:10
Stack trace:
%a
